# InfoMonitoring

./: .env.example  .gitignore  PRODUCTION_REPORT.md  README.md  alembic.ini  mypy.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_init.py  0002_add_risks.py
app/: main.py
app/api/v1/: router.py
app/api/v1/routes/: feedback.py  monitor.py
app/core/: logging.py  settings.py
app/db/: check_db_connection.py  init_db.py  session.py
app/models/: __init__.py  geo.py  headline.py  inforeason.py  marketing_angle.py  risk.py  test_result.py
app/schemas/: feedback_schema.py  llm.py  monitor_response_schema.py  monitor_schema.py  recommendations.py  risk_schema.py
app/services/feedback/: service.py
app/services/llm/: client.py  pipeline.py
app/services/parser/: google_news_rss.py
app/workflows/: monitor.py
