[project]
name = "ai-monitoring"
version = "0.1.0"
description = "AI-мониторинг инфоповодов и генерация маркетинговых связок"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "BlackboxAI" }]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true

[tool.black]
line-length = 100

[tool.poetry]
# keeping section for compatibility; harmless if poetry isn't used
name = "ai-monitoring"

[dependencies]
fastapi = "^0.115.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
httpx = "^0.27.0"
feedparser = "^6.0.11"
openai = "^1.40.0"
SQLAlchemy = "^2.0.35"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
psycopg = "^3.1.19"
python-dateutil = "^2.9.0.post0"

[dev-dependencies]
ruff = "^0.6.3"
black = "^24.8.0"
mypy = "^1.11.2"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

